plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'io.freefair.lombok' version '8.6'
}

// module-specific configurations
group = 'io.github.jspinak.brobot'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '20'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//implementation files('../library/build/libs/brobot-1.0.7.jar')
	implementation project(':library') // Dependency on the library module
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JUnit Jupiter for testing
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
	// Spring Boot Starter Test for Spring Boot testing support
	implementation 'org.springframework.boot:spring-boot-starter-test' //:3.2.2
	implementation group: 'com.h2database', name: 'h2', version: '2.2.224'

	implementation 'org.springframework.boot:spring-boot-starter-web' //:3.2.2
	//implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	// database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	//implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'

	implementation('com.sikulix:sikulixapi:2.0.5') {
		exclude group: 'org.slf4j', module: 'slf4j-nop'
	}
	implementation 'ch.qos.logback:logback-classic:1.4.12'

	implementation group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.10'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
	implementation 'com.github.kwhat:jnativehook:2.2.2'
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
}
